EC444Smart&ConnectedSystems/Quests/quest-3/code/buzzer/build/log/idf_py_stdout_output_27672
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.3.1\EC444\Team4-Blaizot-Cruanes-Diallo-Gilligan\quest-3\code\buzzer\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/buzzer_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/buzzer_main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/build/config -IC:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_dac/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_adc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_adc/interface -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_adc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_adc/deprecated/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/buzzer_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\buzzer_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/buzzer_main.c.obj -c C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:27:5: error: "/*" within comment [-Werror=comment]
   27 |     /* Set the ADC2 channels, these channels are connected to the DAC channels internally */
      |      
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:32:9: error: "/*" within comment [-Werror=comment]
   32 |         /* Read the DAC output voltage *//*
      |          
In file included from C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/esp_cpu.h:20,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/spinlock.h:11,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:7:
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c: In function 'app_main':
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:90:41: error: 'chan0_handle' undeclared (first use in this function)
   90 |         ESP_ERROR_CHECK(dac_cosine_stop(chan0_handle));
      |                                         ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:90:41: note: each undeclared identifier is reported only once for each function it appears in
   90 |         ESP_ERROR_CHECK(dac_cosine_stop(chan0_handle));
      |                                         ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
C:/Espressif/frameworks/esp-idf-v5.3.1/EC444/Team4-Blaizot-Cruanes-Diallo-Gilligan/quest-3/code/buzzer/main/buzzer_main.c:91:37: error: 'chan1_handle' undeclared (first use in this function)
   91 |     ESP_ERROR_CHECK(dac_cosine_stop(chan1_handle));
      |                                     ^~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
